
plugins {
	id 'com.github.ben-manes.versions' version '0.39.0'
	id 'application'
	id 'checkstyle'
	id 'java'
	id 'jacoco'
	id 'com.adarshr.test-logger' version '3.0.0'
}

group = 'hexlet.code'
version = '1.0-SNAPSHOT'

application {
	mainClass = 'hexlet.code.App'
}

compileJava {
	options.release = 15
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'info.picocli:picocli:4.6.1'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'
	testImplementation(platform('org.junit:junit-bom:5.8.1'))
	testImplementation('org.junit.jupiter:junit-jupiter')
}

test {
	useJUnitPlatform()
	testLogging {
		events "passed", "skipped", "failed"
	}
	finalizedBy jacocoTestReport
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		csv.required = false
		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
	}
}

jacoco {
	toolVersion = "0.8.7"
}

